# hancom-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
docs/: BACKLOG.md
docs/plans/: B-01-insert-image.md  B-04-delete-clear.md  B-06-default-template.md  B-12-patched-boilerplate.md  B-13-paragraph-id-normalize.md  B-15-strip-linesegarray.md  _loop_queue.md
lib/java-src/: HwpFillDump.java  HwpTableDump.java
src/hancom_writer/: __main__.py  cleanup.py  conversion.py  editor.py  hwp_patcher.py  hwpx_core.py  id_normalizer.py  models.py  reader.py  server.py  styles.py  templates.py  viewer.py  writer.py  xml_io.py
tests/: conftest.py  create_sample.py  replicate_gridi_final.py  test_default_template.py  test_delete_clear.py  test_hwpx.py  test_id_normalize.py  test_insert_image.py  test_patched_boilerplate.py  test_strip_linesegarray.py
