[project]
name = "hancom-writer"
version = "0.1.0"
description = "MCP server for reading and writing HWPX (Korean Hancom Office) documents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "lxml>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
hancom-writer = "hancom_writer.server:main"
